# connie

./: .gitignore  CMakeLists.txt  FullyConnectedLayer.cpp  FullyConnectedLayer.hpp  InputLayer.hpp  LayerBase.hpp  Net.cpp  Net.hpp  README.md  RegressionLayer.cpp  RegressionLayer.hpp  ReluLayer.hpp  SGDTrainer.cpp  SGDTrainer.hpp  SigmoidLayer.hpp  SoftmaxLayer.cpp  SoftmaxLayer.hpp  Tensor.hpp  TrainerBase.hpp  Vol.hpp  main.cpp
examples/: main_test.cpp  paint_picture.cpp
examples/digit_classifier/: digit_classifier.cpp
examples/image_regression/: image_regression.cpp
examples/main_test/: main_test.cpp
examples/mnist/: Dataset.hpp  MnistDataset.hpp  MnistSample.hpp  README.md  Sample.hpp  mnist.cpp
examples/xor/: xor.cpp
src/: AdaGradTrainer.cpp  ConvolutionalLayer.cpp  DropoutLayer.cpp  FullyConnectedLayer.cpp  InputLayer.cpp  LayerBase.cpp  LayerBase.hpp  LossLayerBase.hpp  MaxPoolingLayer.cpp  MomentumTrainer.cpp  NesterovTrainer.cpp  Net.cpp  PoolingLayerBase.cpp  RMSPropTrainer.cpp  RegressionLayer.cpp  ReluLayer.cpp  SGDTrainer.cpp  SGDTrainer.hpp  SigmoidLayer.cpp  SoftmaxLayer.cpp  TanhLayer.cpp  Tensor.hpp  TrainerBase.cpp  TrainerBase.hpp
src/include/: AdaGradTrainer.hpp  ConvolutionalLayer.hpp  DropoutLayer.hpp  FullyConnectedLayer.hpp  InputLayer.hpp  LayerBase.hpp  LossLayerBase.hpp  MaxPoolingLayer.hpp  MomentumTrainer.hpp  NesterovTrainer.hpp  Net.hpp  PoolingLayerBase.hpp  RMSPropTrainer.hpp  RegressionLayer.hpp  ReluLayer.hpp  SGDTrainer.hpp  SigmoidLayer.hpp  SoftmaxLayer.hpp  TanhLayer.hpp  Tensor.hpp  TrainerBase.hpp
src/main/: FullyConnectedLayer.cpp  FullyConnectedLayer.hpp  InputLayer.hpp  LayerBase.hpp  Net.cpp  Net.hpp  ReluLayer.hpp  SGDTrainer.cpp  SGDTrainer.hpp  SigmoidLayer.hpp  SoftmaxLayer.hpp  TanhLayer.hpp  Tensor.hpp  TrainerBase.hpp
src/test/: main.cpp  main_test.cpp  paint_picture.cpp
tests/: MemoryStream.hpp  convolution.cpp  learning.cpp  pooling.cpp  tensor.cpp
